--- a/Projeto_MVP_de_Machine_Learning.ipynb
+++ b/Projeto_MVP_de_Machine_Learning.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMEqnZfdeckptjAdAT+Wxrq",
+      "authorship_tag": "ABX9TyPgiYU6/cLnelO/tkygl7Y0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -70,12 +70,12 @@
         "pd.read_csv('dog_breeds.csv')"
       ],
       "metadata": {
-        "id": "4KtTrLoNZAp4",
-        "outputId": "27f80939-2199-4c3f-f046-01bfbc668b9e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 424
-        }
+        },
+        "id": "4KtTrLoNZAp4",
+        "outputId": "27f80939-2199-4c3f-f046-01bfbc668b9e"
       },
       "execution_count": 7,
       "outputs": [
@@ -529,11 +529,11 @@
         "print (dados_cachorros.head())"
       ],
       "metadata": {
-        "id": "CEXAbIIIbYTw",
-        "outputId": "c9686c3b-d1b6-44af-af3d-aa6c09b4449d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "CEXAbIIIbYTw",
+        "outputId": "c9686c3b-d1b6-44af-af3d-aa6c09b4449d"
       },
       "execution_count": 13,
       "outputs": [
@@ -564,6 +564,100 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Verificar valores ausentes\n",
+        "valores_ausentes = dados_cachorros.isnull().sum()\n",
+        "\n",
+        "# Exibir os valores ausentes por coluna\n",
+        "print(valores_ausentes)"
+      ],
+      "metadata": {
+        "id": "QLErLKaqb4tV",
+        "outputId": "1ed4cd7c-6739-4ff9-ee20-159ace7a2d78",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Breed                       0\n",
+            "Country of Origin         117\n",
+            "Fur Color                 117\n",
+            "Height (in)               117\n",
+            "Color of Eyes             117\n",
+            "Longevity (yrs)           117\n",
+            "Character Traits          117\n",
+            "Common Health Problems    117\n",
+            "dtype: int64\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Como apenas a coluna de breed está sem dados disponiveis vamos segui para divisão de dados de treino e teste do modelo"
+      ],
+      "metadata": {
+        "id": "4GJumQbPcisP"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.model_selection import train_test_split\n",
+        "\n",
+        "# Separar os atributos e as variáveis alvo\n",
+        "X = dados_cachorros.drop(columns=['Breed'])  # Atributos\n",
+        "y = dados_cachorros['Breed']  # Variável alvo\n",
+        "\n",
+        "# Dividir os dados em conjuntos de treinamento e teste\n",
+        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+        "\n",
+        "# Verificar as formas dos conjuntos de treinamento e teste\n",
+        "print(\"Shape do conjunto de treinamento (X):\", X_train.shape)\n",
+        "print(\"Shape do conjunto de teste (X):\", X_test.shape)\n",
+        "print(\"Shape do conjunto de treinamento (y):\", y_train.shape)\n",
+        "print(\"Shape do conjunto de teste (y):\", y_test.shape)"
+      ],
+      "metadata": {
+        "id": "_IR7eDDqc08o",
+        "outputId": "59133d55-6689-4696-8e48-a7acd87cf537",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Shape do conjunto de treinamento (X): (93, 7)\n",
+            "Shape do conjunto de teste (X): (24, 7)\n",
+            "Shape do conjunto de treinamento (y): (93,)\n",
+            "Shape do conjunto de teste (y): (24,)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "7t0ZcbzvdNF5"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
