--- a/Projeto_MVP_de_Machine_Learning.ipynb
+++ b/Projeto_MVP_de_Machine_Learning.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPgiYU6/cLnelO/tkygl7Y0",
+      "authorship_tag": "ABX9TyPA22g+3Lp8rxajTJkql6p5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -575,11 +575,11 @@
         "print(valores_ausentes)"
       ],
       "metadata": {
-        "id": "QLErLKaqb4tV",
-        "outputId": "1ed4cd7c-6739-4ff9-ee20-159ace7a2d78",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "QLErLKaqb4tV",
+        "outputId": "1ed4cd7c-6739-4ff9-ee20-159ace7a2d78"
       },
       "execution_count": 14,
       "outputs": [
@@ -603,7 +603,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Como apenas a coluna de breed está sem dados disponiveis vamos segui para divisão de dados de treino e teste do modelo"
+        "# Como apenas a coluna de breed está sem dados disponiveis vamos seguir para divisão de dados de treino e teste do modelo"
       ],
       "metadata": {
         "id": "4GJumQbPcisP"
@@ -630,11 +630,11 @@
         "print(\"Shape do conjunto de teste (y):\", y_test.shape)"
       ],
       "metadata": {
-        "id": "_IR7eDDqc08o",
-        "outputId": "59133d55-6689-4696-8e48-a7acd87cf537",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "_IR7eDDqc08o",
+        "outputId": "59133d55-6689-4696-8e48-a7acd87cf537"
       },
       "execution_count": 15,
       "outputs": [
